Bug 119574 - Writer Format > Page menu so wide the options are not legible
Summary: Writer Format > Page menu so wide the options are not legible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-28 20:32 UTC by jimbudarz
Modified: 2018-09-04 22:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of menu behavior (198.57 KB, image/png)
2018-08-28 20:32 UTC, jimbudarz
Details
File causing problem (21.39 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-08-30 12:56 UTC, jimbudarz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jimbudarz 2018-08-28 20:32:09 UTC
Description:
The Format > Page menu is so wide it's impossible to read the settings, since they're cut off. The menu opens up this wide whether the application is maximized or not.

Steps to Reproduce:
1. Click Format dropdown menu
2. Click Page...
3. Select "Page" tab if it's not already selected

Actual Results:
Menu window opens wider than the application itself and words are cut off on left hand side.

Expected Results:
Reasonably-sized window opens and options are aligned within this window


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Ubuntu 18.04, LibreOffice installed from PPA
Comment 1 jimbudarz 2018-08-28 20:32:56 UTC
Created attachment 144525 [details]
Screenshot of menu behavior
Comment 2 Xisco Faulí 2018-08-29 08:40:50 UTC
Thank you for reporting the bug. To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 3 jimbudarz 2018-08-29 13:05:27 UTC
Yes, I renamed my "user" profile folder to "user-old" and that fixed the problem. Why did the problem persist in Safe Mode, then, per the instructions I followed before submitting the bug report?
Comment 4 jimbudarz 2018-08-29 13:11:42 UTC
Actually, this is interesting- the issue is document-specific. After the user profile reset, the menu appears fine for a blank document. However, for the document I'm editing the problem persists. Should I upload the document? As a workaround I can probably paste the contents into a new document.
Comment 5 Xisco Faulí 2018-08-30 09:48:25 UTC
(In reply to jimbudarz from comment #4)
> Actually, this is interesting- the issue is document-specific. After the
> user profile reset, the menu appears fine for a blank document. However, for
> the document I'm editing the problem persists. Should I upload the document?
> As a workaround I can probably paste the contents into a new document.

Yes, please, attach the document to see if we have the same behaviour...
Comment 6 jimbudarz 2018-08-30 12:56:46 UTC
Created attachment 144555 [details]
File causing problem
Comment 7 Xisco Faulí 2018-08-31 19:48:18 UTC
Thanks for the file.
Now I can reproduce it in

Version: 6.1.0.0.alpha1+
Build ID: 3a801799536e6870f2fb111b1cc00b9575a35a39
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Versión: 6.1.0.3
Id. de compilación: efb621ed25068d70781dc026f7e9c5187a4decd1
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded
Comment 8 Xisco Faulí 2018-08-31 19:55:47 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7ba10e2d317a53763e1aff55a85546bfdac12fc5

author	Olivier Hallot <olivier.hallot@alta.org.br>	2013-02-26 22:09:55 -0300
committer	Caolán McNamara <caolanm@redhat.com>	2013-02-27 12:01:16 +0000
commit 7ba10e2d317a53763e1aff55a85546bfdac12fc5 (patch)
tree 633050dc71f488a74406169feb557ab09b098fa2
parent 32cb84f3718e96658f24ffc67c2e56386bf3f25f (diff)
Convert page format tab page to new widget UI

Bisected with: bibisect-41max

Adding Cc: to Olivier Hallot

@Caolán, I thought you could be interested in this issue as well...
Comment 9 Caolán McNamara 2018-09-03 09:06:44 UTC
There's one style that has a massively long width
Comment 10 Commit Notification 2018-09-03 11:52:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a4ed4533127db8cf149353d587a7d3a89c5b338

Resolves: tdf#119574 set specific width for style list widget

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2018-09-03 12:16:24 UTC
backport to 6-1 in gerrit
Comment 12 jimbudarz 2018-09-03 13:07:25 UTC
Thanks, everyone, for your effort!
Comment 13 Xisco Faulí 2018-09-04 11:11:07 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: bf8fbbaa683ef7eef5f9587b60486f622b50cb80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!!!
Comment 14 Commit Notification 2018-09-04 22:36:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a3300fdf65b91350d2c8f63c57cab2c38c3c828&h=libreoffice-6-1

Resolves: tdf#119574 set specific width for style list widget

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.