Resolves: tdf#119574 set specific width for style list widget

so super wide style name doesn't break things

Change-Id: I096eb1d3deeb935b43566b4d3ccb45d89ac2a56a